<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    tools:context=".SignUpActivity">
    <TextView
        android:id="@+id/signUpHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/inputContainer"
        android:textSize="24sp"/>
    <LinearLayout
        android:id="@+id/inputContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/signUpHeading"
        app:layout_constraintBottom_toTopOf="@id/buttonContainer"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintVertical_weight="1">
        <LinearLayout
            android:id="@+id/emailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">
            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/emailLabel" />
            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/fullNameContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/fullNameTextView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/full_name" />
            <EditText
                android:id="@+id/fullNameEditText"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/phoneContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
           >
            <TextView
                android:id="@+id/phoneTextView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/phone" />
            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/addressContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/addressTextView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/address" />
            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/passwordContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/emailContainer"
            app:layout_constraintLeft_toLeftOf="parent">
            <TextView
                android:id="@+id/passwordTextView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/passwordLabel" />
            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/confirmPasswordContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/emailContainer"
            app:layout_constraintLeft_toLeftOf="parent">
            <TextView
                android:id="@+id/confirmPasswordTextView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password" />
            <EditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@id/inputContainer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:onClick="signUpUser"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>