<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="8dp">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AddFood"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageThumbnail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_weight="1"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/ic_camera_retro_solid"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/inputContainer"
        android:onClick="takePhoto"
        android:contentDescription="@string/imageThumbnail"
        android:alpha="0.5"/>


    <LinearLayout
        android:id="@+id/inputContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imageThumbnail"
        app:layout_constraintBottom_toTopOf="@id/buttonContainer"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintVertical_weight="2">
        <LinearLayout
            android:id="@+id/titleContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginVertical="8dp">
            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/title" />
            <EditText
                android:id="@+id/titleEditText"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/descriptionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="8dp">
            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/description" />
            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dateContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="8dp"
            >
            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/date" />
            <DatePicker
                android:id="@+id/dateDatePicker"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/pickUpContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="8dp">
            <TextView
                android:id="@+id/pickUpTextView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/pick_up_times" />
            <EditText
                android:id="@+id/pickUpEditText"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/quantityContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/emailContainer"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginVertical="8dp">
            <TextView
                android:id="@+id/quantityTextView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Quantity" />
            <EditText
                android:id="@+id/quantityEditText"
                android:inputType="number"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/locationContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/emailContainer"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginVertical="8dp">
            <TextView
                android:id="@+id/locationTextView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/location" />
            <EditText
                android:id="@+id/locationEditText"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@id/inputContainer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_food"
            android:onClick="addNewFood"
            />
    </LinearLayout>
</LinearLayout>
</ScrollView>